--- a/main.html
+++ b/main.html
@@ -8,6 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1px">
+		<thead>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td>1</td>
+			<td>Atul</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Adesh</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>Akash</td>
+		</tr>
+		</tbody>
+	</table>
+	<h3>List of medias</h3>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
+		<li>
+			<video controls width="320px" height="240px">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li>
+			<audio controls>
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			</audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
