--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		</tr>
 		</tbody>
 	</table>
-	<h3>List of medias</h3>
+	List of medias
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
 		<li>
