--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1px">
+	<table >
 		<thead>
 		<tr>
 			<th>Roll numbers</th>
@@ -34,7 +34,7 @@
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
 		<li>
-			<video controls width="320px" height="240px">
+			<video controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			</video>
 		</li>
